--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -68,12 +68,14 @@
 }
 
 .btn {
- border:3px solid #000;
- background-color:#d3d3d3;
- color:#000;
- padding:0 10px;
- margin-left:25px;
- -webkit-shape-margin:5px;
- shape-margin:5px;
- /*! font-size:30px; */cursor:pointer
+
+    /* background-color: #d3d3d3; */
+    color: #000;
+    padding: 0 10px;
+    /* margin-left: 25px; */
+    /* margin-right: 30px; */
+    -webkit-shape-margin: 5px;
+    shape-margin: 5px;
+    /* font-size: 30px; */
+    cursor: pointer;
 }
