--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -69,7 +69,7 @@
 
 .btn {
 
-    /* background-color: #d3d3d3; */
+    background-color: #d3d3d3;
     color: #000;
     padding: 0 10px;
     /* margin-left: 25px; */
