--- a/src/components/ShoppingCart/ShoppingCartTab.css
+++ b/src/components/ShoppingCart/ShoppingCartTab.css
@@ -102,6 +102,7 @@ button {
   margin-top: 9px;
   z-index: 1;
   color: #4f5b66;
+  font-size: 14px;
 }
 
 .text-left{
@@ -150,9 +151,6 @@ button {
     padding-top: 10px;
 }
 
-.Sale__off{
-    border: none;    
-}
 .font__cus{
     color: green;
 }
